trying out a trick to prevent cell resizing to fit content and to hide overflown text #229

--- a/src/main/java/upandgo/client/resources/TimeTableStyle.css
+++ b/src/main/java/upandgo/client/resources/TimeTableStyle.css
@@ -1,14 +1,13 @@
 @CHARSET "UTF-8";
 
 .timeTable{
-	table-layout: fixed;
-
+    width: 100%;
+    height: 100%;
+	border: 20px white
 }
 
 .tableRow td {
 	height:20px;
-		overflow: hidden;
-	text-overflow: ellipsis;
 	
 }
 
@@ -31,15 +30,32 @@
 }
 
 .hasEvent{
+	position: relative; overflow: hidden; display: table-cell;
 	color: white;
 	font-weight: bold;
-	padding: .8em;
+    padding: 0.8em;
+
 	background: #577F92;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), inset 0 -3px 0 rgba(0, 0, 0, 0.2);
-}
 
 .hasEvent:hover{
   background: #618da1;
+}
+
+.hasEventWrap{
+		position: absolute;  top: 0; left: 0; width: 100%; height: 90%;	
+	overflow: hidden;
+    padding: 0.8em;
+}
+
+.hasEventWrap:after{
+  content: "";
+  text-align: right;
+  position: absolute;
+	right:0; bottom:0; left:0;
+  height: 1.2em;
+  background: linear-gradient(transparent, #577F92);
+
 }
 
 .noEvent{
